--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-vuetify": "^2.1.0",
+    "vuetify": "^3.7.14"
   }
 }
